# marxist-quote

./: Cargo.toml  gnome-ui-guidelines.txt  next
assets/: marxist-quote-fetch.service
engyls/: Cargo.toml
engyls-place/: Cargo.toml
engyls-place/src/: events.rs  main.rs  state.rs
engyls-place/src/draw/: author.rs  guides.rs  mod.rs  quote.rs
engyls-quote/: Cargo.toml
engyls-quote/src/: main.rs
engyls/src/: lib.rs
engyls/src/config/: manager.rs  mod.rs  types.rs  utils.rs
engyls/src/fetch/: mod.rs  pool.rs  wikiquote.rs
gui/: Cargo.toml
gui/src/: app.rs  config.rs  fetch.rs  main.rs
gui/src/app/: input.rs  mod.rs  model.rs
