[package]
name = "engyls"
version = "0.1.0"
edition = "2024"
[lib]
crate-type = ["cdylib", "rlib"]
name = "engyls"

[dependencies]
gtk = { version = "0.18", package = "gtk" }
cairo-rs = "0.18"
pango = "0.18"
pangocairo = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"

